Bug 770626 - 'Back' swipe triggers several onbeforeunload popups, causes "hang". r=bgirard